# godot_gdext_minimal

./: .gitignore  CMakeLists.txt  README.md  gdexample.gdextension
src/: gdexample.cpp  gdexample.h  register_types.cpp
